Add relation between Project and Cue.

--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -28,6 +28,11 @@
             <a ui-sref="camera-detail({id:vm.cue.camera.id})">{{vm.cue.camera.name}}</a>
         </dd>
         <hr>
+        <dt><span>Project</span></dt>
+        <dd>
+            <a ui-sref="project-detail({id:vm.cue.project.id})">{{vm.cue.project.name}}</a>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
