--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -27,6 +27,7 @@
                     <th jh-sort-by="camera.name"><span>Camera</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="timePoint.startTime"><span>Start time</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="timePoint.duration"><span>Duration</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="project.name"><span>Project</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -44,6 +45,9 @@
                     </td>
                     <td>
                         <a ui-sref="camera-detail({id:cue.camera.id})">{{cue.camera.name}}</a>
+                    </td>
+                    <td>
+                        <a ui-sref="project-detail({id:cue.project.id})">{{cue.project.name}}</a>
                     </td>
                     <td>{{cue.timePoint.startTime}}</td>
                     <td>{{cue.timePoint.duration}}</td>
