--- a/src/main/webapp/app/entities/project/project-download-dialog.html
+++ b/src/main/webapp/app/entities/project/project-download-dialog.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
             ng-click="vm.clear()">&times;</button>
-    <h4 class="modal-title">Confirm download operation</h4>
+    <h4 class="modal-title">Select a download filetype</h4>
 </div>
 <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
-    <p>Are you sure you want to download this Project?</p>
+    <p>Download the script in PDF or XML format.</p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
