linked xml to download

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/vis/dist/vis.min.css" />
+    <link rel="stylesheet" href="bower_components/vis/dist/vis.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
@@ -70,18 +70,19 @@
     <script src="bower_components/blob-polyfill/Blob.js"></script>
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
-    <script src="bower_components/vis/dist/vis.min.js"></script>
+    <script src="bower_components/vis/dist/vis.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js app/app.js  -->
     <!-- inject:js -->
     <script src="app/app.module.js"></script>
-    <script src="app/account/reset/request/reset.request.state.js"></script>
-    <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
+    <script src="app/account/reset/request/reset.request.state.js"></script>
+    <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/services/user/user.service.js"></script>
+    <script src="app/services/user/project-manager.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -102,6 +103,12 @@
     <script src="app/entities/time-point/time-point-dialog.controller.js"></script>
     <script src="app/entities/time-point/time-point-detail.controller.js"></script>
     <script src="app/entities/time-point/time-point-delete-dialog.controller.js"></script>
+    <script src="app/entities/script/script.state.js"></script>
+    <script src="app/entities/script/script.service.js"></script>
+    <script src="app/entities/script/script.controller.js"></script>
+    <script src="app/entities/script/script-dialog.controller.js"></script>
+    <script src="app/entities/script/script-detail.controller.js"></script>
+    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
     <script src="app/entities/project/project.state.js"></script>
     <script src="app/entities/project/project.service.js"></script>
     <script src="app/entities/project/project.controller.js"></script>
@@ -110,12 +117,6 @@
     <script src="app/entities/project/project-dialog.controller.js"></script>
     <script src="app/entities/project/project-detail.controller.js"></script>
     <script src="app/entities/project/project-delete-dialog.controller.js"></script>
-    <script src="app/entities/script/script.state.js"></script>
-    <script src="app/entities/script/script.service.js"></script>
-    <script src="app/entities/script/script.controller.js"></script>
-    <script src="app/entities/script/script-dialog.controller.js"></script>
-    <script src="app/entities/script/script-detail.controller.js"></script>
-    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
     <script src="app/entities/player/player.state.js"></script>
     <script src="app/entities/player/player.service.js"></script>
     <script src="app/entities/player/player.controller.js"></script>
