--- a/src/main/webapp/app/scripting/scriptingview.html
+++ b/src/main/webapp/app/scripting/scriptingview.html
@@ -16,5 +16,12 @@
                 <canvas id="concertMap" width="600" height="500"></canvas>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <br />
+                <h3 class="text-center">Timeline</h3>
+                <div id="visualization"></div>
+            </div>
+        </div>
     </div>
 </div>
