--- a/src/main/webapp/app/scripting/scriptingview.html
+++ b/src/main/webapp/app/scripting/scriptingview.html
@@ -1,25 +1,40 @@
 <div ng-cloak>
     <div class="row">
-        <div class="col-md-4">
-            <h3 class="text-center">Add new Object</h3>
-            <fieldset class="form-group">
-                <select class="form-control" id="selectObjectType">
-                    <option value="Camera">Camera</option>
-                    <option value="Player">Player</option>
-                </select>
-                <input type="text" class="form-control" id="nameNewObject" placeholder="Name">
-            </fieldset>
-        </div>
         <div class="col-md-8">
-            <h2 class="text-center">Graphical Overview</h2>
             <div id="map">
                 <canvas id="concertMap" width="600" height="500"></canvas>
             </div>
         </div>
+        <div class="col-md-4">
+            <h3 class="text-center">Add new Cue</h3>
+            <fieldset class="form-group">
+                <label for="selectPlayer">Which player should we use for the cue?</label>
+                <select class="form-control" id="selectPlayer">
+                    <option ng-repeat="player in vm.players" value="{{player.id}}">{{player.name}}</option>
+                </select>
+                <br />
+                <label for="selectCamera">Which camera should we use for the cue?</label>
+                <select class="form-control" id="selectCamera">
+                    <option ng-repeat="camera in vm.cameras" value="{{camera.id}}">{{camera.name}}</option>
+                </select>
+                <br />
+                <label for="selectCameraAction">Which camera action should we use for the cue?</label>
+                <select class="form-control" id="selectCameraAction">
+                    <option ng-repeat="cameraAction in vm.cameraActions" value="{{cameraAction.id}}">{{cameraAction.name}}</option>
+                </select>
+                <br />
+                <label for="selectScript">Which script should we use for the cue?</label>
+                <select class="form-control" id="selectScript">
+                    <option ng-repeat="script in vm.scripts" value="{{script.id}}">{{script.name}}</option>
+                </select>
+                <br />
+                <label for="durationCue">How long should this cue be?</label>
+                <input type="number" class="form-control" id="durationCue" placeholder="1">
+            </fieldset>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 <br />
-                <h3 class="text-center">Timeline</h3>
                 <div id="visualization"></div>
             </div>
         </div>
