--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -7,10 +7,11 @@
                 <p class="lead" ng-switch-when="false">Please login or register</p>
                 <p class="lead" ng-switch-when="true">What is on your mind today?</p><br /><br /><br />
                 <div ng-switch-when="true" class="row">
-                    <div class="col-md-4"><span class="glyphicon glyphicon-camera" style="font-size: 60pt;"></span><hr/><p class="lead">{{vm.cameras.length}} Cameras</p></div>
-                    <div class="col-md-4"><span class="glyphicon glyphicon-film" style="font-size: 60pt;"></span><hr/><p class="lead">{{vm.cameraActions.length}} Camera Actions</p></div>
-                    <div class="col-md-4"><span class="glyphicon glyphicon-apple" style="font-size: 60pt;"></span><hr/><p class="lead">42 Apples</p></div>
+                    <div class="col-md-4"><span class="glyphicon glyphicon-file" style="font-size: 60pt;"></span><hr/><p class="lead">Create a new project</p></div>
+                    <div class="col-md-4"><span class="glyphicon glyphicon-folder-open" style="font-size: 60pt;"></span><hr/><p class="lead">Load an existing project</p></div>
+                    <div class="col-md-4"><span class="glyphicon glyphicon-circle-arrow-right" style="font-size: 60pt;"></span><hr/><p class="lead">Move on from were you left: </br>{{vm.currentProject.name}}</p></div>
                 </div>
             </CENTER>
         </div>
     </div>
+</div>
