--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -25,10 +25,9 @@
                     <th jh-sort-by="cameraAction.name"><span>Camera Action</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="player.name"><span>Player</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="camera.name"><span>Camera</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="timePoint.startTime"><span>Start time</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="timePoint.duration"><span>Duration</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="project.name"><span>Project</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th></th>
+                    <th jh-sort-by="timePoint.id"><span>Start time</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="timePoint.duration"><span>Duration</span> <span class="glyphicon glyphicon-sort"></span></th>
                 </tr>
             </thead>
             <tbody>
