--- a/src/main/webapp/app/home/load-dialog.html
+++ b/src/main/webapp/app/home/load-dialog.html
@@ -12,8 +12,6 @@
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="name"><span>Name</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="script.id"><span>Script</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="map.id"><span>Map</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
                 </thead>
@@ -29,11 +27,8 @@
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ng-click="vm.open({id:project.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
-                                <span class="hidden-xs hidden-sm"></span>
+                            <button type="submit" ng-click="vm.load(project.id)" class="btn btn-primary">
+                                <span class="glyphicon glyphicon-chevron-right"></span>&nbsp;<span>Open</span>
                             </button>
                         </div>
                     </td>
