--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -10,13 +10,16 @@
                 <div ng-switch-when="true" class="row">
                     <div class="col-md-4"><span class="glyphicon glyphicon-file" style="font-size: 60pt;"></span>
                         <hr/>
-                        <p class="lead"><button class="btn btn-primary"
-                                                has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
-                                                ui-sref="home.create">
+                        <p class="lead">
+                            <button class="btn btn-primary"
+                                    has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
+                                    ui-sref="home.create">
                     <span>
                         Create a new project
                     </span>
-                        </button></p></div>
+                            </button>
+                        </p>
+                    </div>
                     <div class="col-md-4"><span class="glyphicon glyphicon-folder-open" style="font-size: 60pt;"></span>
                         <hr/>
                         <p class="lead">
@@ -33,7 +36,17 @@
                         <div ng-switch-when="true" class="col-md-4"><span class="glyphicon glyphicon-circle-arrow-right"
                                                                           style="font-size: 60pt;"></span>
                             <hr/>
-                            <p class="lead">Move on from were you left: </br>{{vm.currentProject.name}}</p></div>
+                            <p class="lead">
+                                <button class="btn btn-primary"
+                                        has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
+                                        ui-sref="mapview">
+                    <span>
+                        Move on from were you left: </br>{{vm.currentProject.name}}
+                    </span>
+                                </button>
+
+                            </p>
+                        </div>
                     </div>
                 </div>
             </CENTER>
