--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -217,11 +217,11 @@
     <script src="app/timeline/timeline.controller.js"></script>
     <script src="app/map/mapview.state.js"></script>
     <script src="app/map/mapview.controller.js"></script>
-    <script src="app/home/load-dialog.controller.js"></script>
+    <script src="app/entities/entity.state.js"></script>
+    <script src="app/home/loadproject-dialog.controller.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
-    <script src="app/home/create-dialog.controller.js"></script>
-    <script src="app/entities/entity.state.js"></script>
+    <script src="app/home/createproject-dialog.controller.js"></script>
     <script src="app/admin/admin.state.js"></script>
     <script src="app/account/account.state.js"></script>
     <script src="app/app.state.js"></script>
