--- a/src/main/webapp/app/entities/project/project-dialog.html
+++ b/src/main/webapp/app/entities/project/project-dialog.html
@@ -16,19 +16,18 @@
         <div class="form-group">
             <label class="control-label" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
-                    ng-model="vm.project.name"
-                     />
+                    ng-model="vm.project.name" />
         </div>
 
         <div class="form-group">
             <label for="field_script">Script</label>
-            <select class="form-control" id="field_script" name="script" ng-model="vm.project.script" ng-options="script as script.id for script in vm.scripts | orderBy:'id' track by script.id">
+            <select class="form-control" id="field_script" name="script" ng-model="vm.project.script" ng-options="script as script.name for script in vm.scripts | orderBy:'name' track by script.name">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
             <label for="field_map">Map</label>
-            <select class="form-control" id="field_map" name="map" ng-model="vm.project.map" ng-options="map as map.id for map in vm.maps | orderBy:'id' track by map.id">
+            <select class="form-control" id="field_map" name="map" ng-model="vm.project.map" ng-options="map as map.name for map in vm.maps | orderBy:'name' track by map.name">
                 <option value=""></option>
             </select>
         </div>
