--- a/src/main/webapp/app/home/createproject-dialog.html
+++ b/src/main/webapp/app/home/createproject-dialog.html
@@ -22,14 +22,14 @@
         <div class="form-group">
             <label for="field_script">Script</label>
             <select class="form-control" id="field_script" name="script" ng-model="vm.project.script"
-                    ng-options="script as script.id for script in vm.scripts | orderBy:'id' track by script.id">
+                    ng-options="script as script.name for script in vm.scripts | orderBy:'name' track by script.name">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
             <label for="field_map">Map</label>
             <select class="form-control" id="field_map" name="map" ng-model="vm.project.map"
-                    ng-options="map as map.id for map in vm.maps | orderBy:'id' track by map.id">
+                    ng-options="map as map.name for map in vm.maps | orderBy:'name' track by map.name">
                 <option value=""></option>
             </select>
         </div>
