--- a/src/main/webapp/app/home/createproject-dialog.html
+++ b/src/main/webapp/app/home/createproject-dialog.html
@@ -20,14 +20,14 @@
         </div>
 
         <div class="form-group">
-            <label for="field_script">Script</label>
+            <label for="field_script">Script<span class="caret"></span></label>
             <select class="form-control" id="field_script" name="script" ng-model="vm.project.script"
                     ng-options="script as script.name for script in vm.scripts | orderBy:'name' track by script.name">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
-            <label for="field_map">Map</label>
+            <label for="field_map">Map<span class="caret"></span></label>
             <select class="form-control" id="field_map" name="map" ng-model="vm.project.map"
                     ng-options="map as map.name for map in vm.maps | orderBy:'name' track by map.name">
                 <option value=""></option>
